// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fileInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
        style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
        >
          <label
            class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owl uv_m4c9ow1a uv_m4c9ow32"
          >
            Test
          </label>
          <div
            class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
          >
            <div
              class="uv_12cubgs0 uv_12cubgs2 uv_12cubgs4 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u61"
              data-testid="drag-container"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <input
                class="uv_12cubgs8"
                id="_r_0_"
                name="Test"
                type="file"
              />
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzh uv_icons_1sbwqkz1g"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  UploadIcon
                </title>
                <path
                  d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
                />
                <path
                  d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
              <div
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9ow16 uv_m4c9ow1a uv_m4c9ow32"
                for="_r_0_"
                style="--uv_qabug40: left;"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly as an overlay 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
        style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
      >
        <div
          data-testid="drag-container"
        >
          <input
            class="uv_12cubgs8"
            id="_r_8_"
            name="Test"
            type="file"
          />
          <div
            class="uv_12cubgsb"
          >
            overlay
            <div
              class="uv_12cubgsd uv_12cubgsc"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`fileInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
        style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
        >
          <label
            class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owl uv_m4c9ow1a uv_m4c9ow32"
          >
            Test
          </label>
          <div
            class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
          >
            <div
              class="uv_12cubgs0 uv_12cubgs1 uv_12cubgs2 uv_12cubgs4 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u61"
              data-testid="drag-container"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz7 uv_icons_1sbwqkzh uv_icons_1sbwqkzk"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  UploadIcon
                </title>
                <path
                  d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
                />
                <path
                  d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
              <div
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9ow16 uv_m4c9ow22"
                for="_r_4_"
                style="--uv_qabug40: left;"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
